// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Start action should produce basic state after start 1`] = `
Object {
  "bid": Object {
    "0": 0,
    "1": 0,
    "2": 0,
    "3": 0,
  },
  "currentPlayerOrder": Array [
    "0",
    "1",
    "2",
    "3",
  ],
  "currentRound": 1,
  "id": "4",
  "names": Object {
    "0": "John",
    "1": "Mary",
    "2": "Henry",
    "3": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "0": Array [],
    "1": Array [],
    "2": Array [],
    "3": Array [],
  },
  "stage": "waitingBid",
  "startTime": 0,
}
`;

exports[`Start action should yield correct state for starting in second round 1`] = `
Object {
  "bid": Object {
    "5": 0,
    "6": 0,
    "7": 0,
    "8": 0,
  },
  "currentPlayerOrder": Array [
    "6",
    "7",
    "8",
    "5",
  ],
  "currentRound": 2,
  "id": "9",
  "names": Object {
    "5": "John",
    "6": "Mary",
    "7": "Henry",
    "8": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "5": Array [
      0,
    ],
    "6": Array [
      0,
    ],
    "7": Array [
      0,
    ],
    "8": Array [
      0,
    ],
  },
  "stage": "waitingBid",
  "startTime": 0,
}
`;

exports[`win action should end game when it is dispatched at last round 1`] = `
Object {
  "endTime": 0,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 1,
  "scores": Object {
    "a": Array [
      -1,
    ],
    "b": Array [
      10,
    ],
    "c": Array [
      10,
    ],
    "d": Array [
      10,
    ],
  },
  "stage": "ended",
  "startTime": 0,
}
`;

exports[`win action should use given win to calculate scores 1`] = `
Object {
  "bid": Object {
    "a": 0,
    "b": 0,
    "c": 0,
    "d": 0,
  },
  "currentPlayerOrder": Array [
    "b",
    "c",
    "d",
    "a",
  ],
  "currentRound": 2,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "a": Array [
      10,
    ],
    "b": Array [
      10,
    ],
    "c": Array [
      10,
    ],
    "d": Array [
      -1,
    ],
  },
  "stage": "waitingBid",
  "startTime": 0,
}
`;

exports[`win action should use win in state object to calculate scores when win is not given 1`] = `
Object {
  "bid": Object {
    "a": 0,
    "b": 0,
    "c": 0,
    "d": 0,
  },
  "currentPlayerOrder": Array [
    "b",
    "c",
    "d",
    "a",
  ],
  "currentRound": 2,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "a": Array [
      -1,
    ],
    "b": Array [
      10,
    ],
    "c": Array [
      10,
    ],
    "d": Array [
      10,
    ],
  },
  "stage": "waitingBid",
  "startTime": 0,
}
`;
